[project]
name = "weather-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.4.2",
    "openai-agents>=0.0.5",
]

[project.scripts]
weather-agent = "weather_agent:main"
dev = "weather_agent.script:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
